--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <nav class="bg-nav-color1">
             <div class="navbar w-11/12 mx-auto pt-5 pb-11">
                 <div class="navbar-start">
-                    <a href="blog.html"><button id="blog-btn" class="text-xl font-semibold text-textHeadline-color bg-highlighted-color px-8 py-3 rounded-lg">Blog</button></a>
+                    <a href="blog.html"><button class="text-xl font-semibold text-textHeadline-color bg-highlighted-color px-8 py-3 rounded-lg">Blog</button></a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
                     <img src="images/logo.png" alt="Donate Bangladesh Logo">
