--- a/blog.html
+++ b/blog.html
@@ -53,9 +53,9 @@
                 <div class="navbar-start">
                     <a href="index.html"><button class="text-xl font-semibold text-textHeadline-color bg-highlighted-color px-8 py-3 rounded-lg">Home</button></a>
                 </div>
-                <div class="navbar-center hidden lg:flex">
+                <div class="navbar-center lg:flex">
                     <img src="images/logo.png" alt="Donate Bangladesh Logo">
-                    <h4 class="text-xl font-semibold text-textHeadline-color ml-4 my-4">Donate Bangladesh</h4>
+                    <h4 class="text-xl font-semibold text-textHeadline-color ml-4 my-4 hidden lg:block">Donate Bangladesh</h4>
                 </div>
                 <div class="navbar-end">
                     <img src="images/coin.png" alt="Coin Png">
@@ -76,7 +76,7 @@
     <main class="w-11/12 mx-auto my-20">
         <section>
             <h2 class="font-bold text-3xl mb-8">Important FAQ</h2>
-            <div class="collapse collapse-arrow bg-base-200">
+            <div class="collapse collapse-arrow bg-base-200 mb-5 p-4">
                 <input type="radio" name="my-accordion-2" checked="checked" />
                 <div class="collapse-title text-xl font-semibold text-textHeadline-color">What is the Document Object Model (DOM)?</div>
                 <div class="collapse-content font-medium text-textBody-color">
@@ -84,7 +84,7 @@
                 </div>
             </div>
 
-            <div class="collapse collapse-arrow bg-base-200">
+            <div class="collapse collapse-arrow bg-base-200 mb-5 p-4">
                 <input type="radio" name="my-accordion-2" checked="checked" />
                 <div class="collapse-title text-xl font-semibold text-textHeadline-color">How do you select an element from the DOM?</div>
                 <div class="collapse-content font-medium text-textBody-color">
@@ -99,7 +99,7 @@
                 </div>
             </div>
 
-            <div class="collapse collapse-arrow bg-base-200">
+            <div class="collapse collapse-arrow bg-base-200 mb-5 p-4">
                 <input type="radio" name="my-accordion-2" checked="checked" />
                 <div class="collapse-title text-xl font-semibold text-textHeadline-color">What is event delegation in the context of the DOM, and why is it useful?</div>
                 <div class="collapse-content font-medium text-textBody-color">
@@ -108,7 +108,7 @@
                 </div>
             </div>
 
-            <div class="collapse collapse-arrow bg-base-200">
+            <div class="collapse collapse-arrow bg-base-200 mb-5 p-4">
                 <input type="radio" name="my-accordion-2" checked="checked" />
                 <div class="collapse-title text-xl font-semibold text-textHeadline-color">How do you manipulate an element's attributes and styles using the DOM?</div>
                 <div class="collapse-content font-medium text-textBody-color">
