--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                 <div class="navbar-start">
                     <a href="blog.html"><button class="text-xl font-semibold text-textHeadline-color bg-highlighted-color px-8 py-3 rounded-lg">Blog</button></a>
                 </div>
-                <div class="navbar-center hidden lg:flex">
+                <div class="navbar-center lg:flex">
                     <img src="images/logo.png" alt="Donate Bangladesh Logo">
-                    <h4 class="text-xl font-semibold text-textHeadline-color ml-4 my-4">Donate Bangladesh</h4>
+                    <h4 class="text-xl font-semibold text-textHeadline-color ml-4 my-4 hidden lg:block">Donate Bangladesh</h4>
                 </div>
                 <div class="navbar-end">
                     <img src="images/coin.png" alt="Coin Png">
@@ -81,14 +81,14 @@
     <main id="donate-page" class="w-11/12 mx-auto mb-20">
 
         <!-- ----- CARD ITEM 1 ----- -->
-        <section class="p-8 border-2 border-nav-color flex items-center rounded-2xl">
+        <section class="p-8 border-2 border-nav-color flex flex-col lg:flex-row items-center rounded-2xl">
             <!-- ----- INAGE CONTENT ----- -->
-            <div class="w-2/5 mr-8">
+            <div class="xl:w-2/5 lg:w-1/2 mr-0 lg:mr-8 mb-8 lg:mb-0">
                 <img src="images/noakhali.png" alt="Noakhali Flood">
             </div>
 
             <!-- ----- TEXT CONTENT ----- -->
-            <div class="w-3/5">
+            <div class="xl:w-3/5 lg:w-1/2">
                 <button class="flex items-center text-base font-normal text-textbody-color bg-nav-color p-4 rounded-lg">
                     <img class="mr-2" src="images/coin.png" alt="Coin">
                     <span id="noakhali-raised-fund-amount">0 BDT</span>
@@ -109,14 +109,14 @@
         </section>
 
         <!-- ----- CARD ITEM 2 ----- -->
-        <section class="mt-8 p-8 border-2 border-nav-color flex items-center rounded-2xl">
+        <section class="mt-8 p-8 border-2 border-nav-color flex flex-col lg:flex-row items-center rounded-2xl">
             <!-- ----- INAGE CONTENT ----- -->
-            <div class="w-2/5 mr-8">
+            <div class="xl:w-2/5 lg:w-1/2 mr-0 lg:mr-8 mb-8 lg:mb-0">
                 <img src="images/feni.png" alt="Feni Flood">
             </div>
 
             <!-- ----- TEXT CONTENT ----- -->
-            <div class="w-3/5">
+            <div class="xl:w-3/5 lg:w-1/2">
                 <button class="flex items-center text-base font-normal text-textbody-color bg-nav-color p-4 rounded-lg">
                     <img class="mr-2" src="images/coin.png" alt="Coin">
                     <span id="feni-raised-fund-amount">600 BDT</span>
@@ -137,14 +137,14 @@
         </section>
 
         <!-- ----- CARD ITEM 3 ----- -->
-        <section class="mt-8 p-8 border-2 border-nav-color flex items-center rounded-2xl">
+        <section class="mt-8 p-8 border-2 border-nav-color flex flex-col lg:flex-row items-center rounded-2xl">
             <!-- ----- INAGE CONTENT ----- -->
-            <div class="w-2/5 mr-8">
+            <div class="xl:w-2/5 lg:w-1/2 mr-0 lg:mr-8 mb-8 lg:mb-0">
                 <img src="images/quota-protest.png" alt="Quota-Protest">
             </div>
 
             <!-- ----- TEXT CONTENT ----- -->
-            <div class="w-3/5">
+            <div class="xl:w-3/5 lg:w-1/2">
                 <button class="flex items-center text-base font-normal text-textbody-color bg-nav-color p-4 rounded-lg">
                     <img class="mr-2" src="images/coin.png" alt="Coin">
                     <span id="quota-raised-fund-amount">2400 BDT</span>
